--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -135,9 +135,48 @@
             マフラーが必要です
           </div>
 
+                <style>
+        .my_adslot { width: 320px; height: 50px; }
+      </style>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- 重ね着のヘッダ -->
+      <ins class="adsbygoogle my_adslot my-header-ad"
+           style="display:inline-block"
+           data-ad-client="ca-pub-0514478731635320"
+           data-ad-slot="2102442229"></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
+      <style>
+        .my-header-ad {
+        margin-left: -5px;
+        }
+      </style>
+
+
           <div id="share-tweet-container">
             <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD"><img src="images/tweet-button.png" title="重ね着をツイートする"></a>
           </div>
+
+          <style>
+            .my_adslot_footer { width: 300px; height: 250px; }
+          </style>
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- 重ね着のフッタ -->
+          <ins class="adsbygoogle my_adslot_footer my-ad-footer"
+               style="display:inline-block"
+               data-ad-client="ca-pub-0514478731635320"
+               data-ad-slot="6532641821"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+          <style>
+            .my-ad-footer {
+            margin-top: 10px;
+            margin-left: 5px;
+            }
+          </style>
 
           <div id="widget-container">
             <a class="twitter-timeline" href="https://twitter.com/search?q=%23%E9%87%8D%E3%81%AD%E7%9D%80" data-widget-id="302684212698415106">#重ね着 に関するツイート</a>
