--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
       (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
@@ -73,6 +73,15 @@
           </div>
           <div class="title">
             swimy1113
+          </div>
+        </div>
+
+                <div class="item" style="left: 500px; top: 300px;">
+          <div>
+            <a href="http://twitter.com/ueday_h"><img src="https://avatars3.githubusercontent.com/u/2049569?v=2&s=460" title="ueday"/></a>
+          </div>
+          <div class="title">
+            ueday
           </div>
         </div>
 
