--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -203,7 +203,12 @@
           </a>
         </div>
 
-        <p class="sorry">
+        <p class="tips">
+          <strong>お知らせ 2014年11月</strong><br/>
+          雨の日には傘を持つようになりました．雨の日のお出かけにもご利用ください．
+        </p>
+
+        <p class="tips">
           <strong>お知らせ 2014年9月</strong><br/>
           しばらくの間，重ね着を表示できない不具合がありました．ご迷惑をおかけしました．復旧にあたって，週間重ね着機能を提供できなくなりました．利用者の皆様にはご迷惑をおかけします．
         </p>
