--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -2,7 +2,7 @@
 <html manifest="/kasanegi/kasanegi.manifest">
   <head>
     <meta charset="utf-8">
-    <title>今日の重ね着</title>
+    <title>今日の重ね着 - 天気に合わせて服装を提案します</title>
 
     <meta name="viewport" content="width=320px, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -175,11 +175,6 @@
             margin-left: 5px;
             }
           </style>
-
-          <div id="widget-container">
-            <a class="twitter-timeline" href="https://twitter.com/search?q=%23%E9%87%8D%E3%81%AD%E7%9D%80" data-widget-id="302684212698415106">#重ね着 に関するツイート</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          </div>
 
         </div>
 
