--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="/kasanegi/kasanegi.manifest">
+<html>
   <head>
     <meta charset="utf-8">
     <title>今日の重ね着 - 天気に合わせて服装を提案します</title>
@@ -14,9 +14,7 @@
     <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
     <script language="javascript" type="text/javascript" defer src="http://widgets.twimg.com/j/2/widget.js"></script>
     <script language="javascript" type="text/javascript" defer src="http://api.docodoco.jp/v3/docodoco?key=COrXLcEMzxNvkfi6pcNtYCZGp9SwZshWiinu4RZDfEiewM7rlXIKFRHwVW9kPJxa" charset="utf-8"></script>
-    <script language="javascript" type="text/javascript" defer src="js/weather.js"></script>
-    <script language="javascript" type="text/javascript" defer src="js/viewer.js"></script>
-    <script language="javascript" type="text/javascript" defer src="js/main.js"></script>
+    <script language="javascript" type="text/javascript" defer src="js/bundle.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/text.css" />
