--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>今日の重ね着 - 天気に合わせて服装を提案します</title>
 
-    <meta name="viewport" content="width=320px, user-scalable=no">
+    <meta name="viewport" content="width=320, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no" />
 
