serve yahoo's gif

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -218,7 +218,7 @@
           <div class="api">
             <!-- Begin Yahoo! JAPAN Web Services Attribution Snippet -->
             <a href="http://developer.yahoo.co.jp/about">
-              <img src="http://i.yimg.jp/images/yjdn/yjdn_attbtn1_125_17.gif" title="Webサービス by Yahoo! JAPAN" alt="Web Services by Yahoo! JAPAN" width="125" height="17" border="0"></a>
+              <img src="images/yahoo.gif" title="Webサービス by Yahoo! JAPAN" alt="Web Services by Yahoo! JAPAN" width="125" height="17" border="0"></a>
             <!-- End Yahoo! JAPAN Web Services Attribution Snippet -->
           </div>
 
