--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -25,7 +25,7 @@
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/kasanegi/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/kasanegi/images/guide.png"/>
 
-    <link rel="canonical" href="http://higashi-dance-network.appspot.com/kasanegi/" />
+    <link rel="canonical" href="https://higashi-dance-network.appspot.com/kasanegi/" />
 
     <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。twitter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
     <script type="text/javascript">
