--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -39,6 +39,14 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-0514478731635320",
+        enable_page_level_ads: true
+       });
+    </script>
   </head>
   <body>
 
