add markup to add to home screen

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -9,6 +9,9 @@
     <meta name="format-detection" content="telephone=no" />
 
     <link rel="apple-touch-icon-precomposed" href="images/home-icon.png"/>
+    <link rel="manifest" href="/kasanegi/manifest.json">
+    <meta name="theme-color" content="#fefbee">
+    <link rel="icon" sizes="192x192" href="images/home-icon-192.png">
 
     <script language="javascript" type="text/javascript" defer src="js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
