rel for target=blank

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -161,7 +161,7 @@
           </style>
 
           <div id="share-tweet-container">
-            <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD"><img src="images/tweet-button.png" title="重ね着をツイートする"></a>
+            <a target="_blank" rel="noopener noreferrer" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD"><img src="images/tweet-button.png" title="重ね着をツイートする"></a>
           </div>
 
           <style>
