renew facebook code

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -285,7 +285,7 @@
       </div>
 
       <div class="fb-container">
-        <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/kasanegi/" data-send="false" data-width="310" data-show-faces="true"></div>
+        <div class="fb-like" data-href="https://higashi-dance-network.appspot.com/kasanegi/" data-width="310" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </div>
 
       <div id="copyright">
