--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <meta property="og:title" content="今日の重ね着"/>
-    <meta property="og:url" content="https://higashi-dance-network.appspot.com/kasanegi/"/>
+    <meta property="og:url" content="http://higashi-dance-network.appspot.com/kasanegi/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/kasanegi/images/guide.png"/>
 
     <link rel="canonical" href="https://higashi-dance-network.appspot.com/kasanegi/" />
