--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <title>今日の重ね着 - 天気に合わせて服装を提案します</title>
 
-    <meta name="viewport" content="width=320, user-scalable=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no" />
 
@@ -18,10 +18,7 @@
     <script language="javascript" type="text/javascript" defer src="js/bundle.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/text.css" />
     <link rel="stylesheet" type="text/css" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" href="css/mobile.css" media="only screen and (max-device-width: 480px)" >
-    <link rel="stylesheet" type="text/css" href="css/pc.css" media="only screen and (min-device-width: 481px)" >
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <meta property="og:title" content="今日の重ね着"/>
@@ -64,16 +61,16 @@
 
     <div id="wrapper">
       <div id="title-container">
+        <a href="#main" id="back-to-main" class="title-button">
+          戻る
+        </a>
         <div id="title">
-          <a href="#main">
-            <img src="images/header.png" title="今日の重ね着">
+          <a href="#main" title="今日の重ね着">
+            <h1>今日の重ね着</h1>
           </a>
         </div>
-        <a href="#main" id="back-to-main">
-          <img src="images/back-button.png" title="戻る"/>
-        </a>
-        <a href="#help" id="help-button">
-          <img src="images/help.png" title="ヘルプ"/>
+        <a href="#help" id="help-button" class="title-button">
+          ヘルプ
         </a>
       </div>
 
@@ -109,28 +106,29 @@
           </div>
 
           <div id="images">
+            <div class="days">
+              <div class="day" id="day-max">
+                <div class="heat">
+                  <span>最高気温 </span><span id="max-temp"></span><span>℃</span>
+                </div>
+                <div class="wear-image">
+                </div>
+                <div class="wear-icons">
+                </div>
+                <div class="clear">
+                </div>
+              </div>
 
-            <div class="day" id="day-max">
-              <div class="heat">
-                <span>最高気温 </span><span id="max-temp"></span><span>℃</span>
-              </div>
-              <div class="wear-image">
-              </div>
-              <div class="wear-icons">
-              </div>
-              <div class="clear">
-              </div>
-            </div>
-
-            <div class="day" id="day-min">
-              <div class="heat">
-                <span>最低気温 </span><span id="min-temp"></span><span>℃</span>
-              </div>
-              <div class="wear-image">
-              </div>
-              <div class="wear-icons">
-              </div>
-              <div class="clear">
+              <div class="day" id="day-min">
+                <div class="heat">
+                  <span>最低気温 </span><span id="min-temp"></span><span>℃</span>
+                </div>
+                <div class="wear-image">
+                </div>
+                <div class="wear-icons">
+                </div>
+                <div class="clear">
+                </div>
               </div>
             </div>
 
@@ -205,15 +203,20 @@
           </a>
         </div>
 
+        <!-- <p class="tips">
+          <strong>お知らせ 2019年4月</strong><br/>
+          画面サイズにあわせて表示されるようになりました
+        </p>
+
         <p class="tips">
           <strong>お知らせ 2014年11月</strong><br/>
-          雨の日には傘を持つようになりました．雨の日のお出かけにもご利用ください．
+          雨の日には傘を持つようになりました．<br>雨の日のお出かけにもご利用ください．
         </p>
 
         <p class="tips">
           <strong>お知らせ 2014年9月</strong><br/>
           しばらくの間，重ね着を表示できない不具合がありました．ご迷惑をおかけしました．復旧にあたって，週間重ね着機能を提供できなくなりました．利用者の皆様にはご迷惑をおかけします．
-        </p>
+        </p> -->
 
         <p class="api-message">
           今日の重ね着では、以下のAPIを利用しています。
