--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -92,15 +92,13 @@
         </div>
         <div id="result">
           <div id="weather-container">
-            <div class="float" id="area-date-container">
+            <div id="area-date-container">
               <div id="area"></div>
               <div id="date"></div>
             </div>
-            <div class="float-right">
+            <div>
               <div id="weather-icons"></div>
               <div id="description"></div>
-            </div>
-            <div class="clear">
             </div>
           </div>
 
@@ -114,8 +112,6 @@
                 </div>
                 <div class="wear-icons">
                 </div>
-                <div class="clear">
-                </div>
               </div>
 
               <div class="day" id="day-min">
@@ -126,17 +122,11 @@
                 </div>
                 <div class="wear-icons">
                 </div>
-                <div class="clear">
-                </div>
               </div>
-            </div>
-
-            <div class="clear">
             </div>
           </div>
 
           <div id="comment">
-            マフラーが必要です
           </div>
 
           <style>
