レスポンシブの設定だけしておく

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -134,7 +134,9 @@
             <ins class="adsbygoogle my_adslot my-header-ad"
                 style="display:inline-block"
                 data-ad-client="ca-pub-0514478731635320"
-                data-ad-slot="2102442229"></ins>
+                data-ad-slot="2102442229"
+                data-ad-format="auto"
+                data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
@@ -153,7 +155,9 @@
             <ins class="adsbygoogle my_adslot_footer my-ad-footer"
                 style="display:inline-block"
                 data-ad-client="ca-pub-0514478731635320"
-                data-ad-slot="6532641821"></ins>
+                data-ad-slot="6532641821"
+                data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
