デプロイ、いろいろ調整

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#fefbee">
     <link rel="icon" sizes="192x192" href="images/home-icon-192.png">
 
-    <link rel="stylesheet" type="text/css" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" href="css/common.css?version=20190421" />
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <meta property="og:title" content="今日の重ね着"/>
@@ -137,9 +137,6 @@
                 data-ad-slot="2102442229"
                 data-ad-format="auto"
                 data-full-width-responsive="true"></ins>
-            <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
           </div>
 
           <div id="share-tweet-container">
@@ -158,9 +155,6 @@
                 data-ad-slot="6532641821"
                 data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
-            <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
             <style>
               .my-ad-footer {
                 margin-top: 10px;
@@ -282,7 +276,7 @@
       </div>
       <script language="javascript" type="text/javascript" defer src="js/jquery-1.6.1.min.js"></script>
       <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
-      <script language="javascript" type="text/javascript" defer src="js/bundle.js"></script>
+      <script language="javascript" type="text/javascript" defer src="js/bundle.js?version=20190421"></script>
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </div>
   </body>
