--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -271,6 +271,7 @@
       <div id="copyright">
         (C) 2012 東ダンスネットワーク
       </div>
+      <script src="https://browser.sentry-cdn.com/5.3.0/bundle.min.js" crossorigin="anonymous"></script>
       <script language="javascript" type="text/javascript" defer src="js/bundle.js?version=20190421"></script>
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </div>
