--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -23,6 +23,12 @@
     <link rel="canonical" href="https://higashi-dance-network.appspot.com/kasanegi/" />
 
     <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。twitter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
+
+    <meta
+      http-equiv="origin-trial"
+      data-feature="Feature Policy Reporting"
+      data-expires="2019-07-16"
+      content="AgrMo6/1cdBaDrtvBkSRMGtQzLAmtFb6NtZwCbIopm5IPvarr5Seu8MfD/xCTSuHlKwO+uEmesrpQaywT7RoJgUAAABxeyJvcmlnaW4iOiJodHRwczovL2hpZ2FzaGktZGFuY2UtbmV0d29yay5hcHBzcG90LmNvbTo0NDMiLCJmZWF0dXJlIjoiRmVhdHVyZVBvbGljeVJlcG9ydGluZyIsImV4cGlyeSI6MTU2MzIzNjExNH0=">
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-30891681-1']);
