--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -246,10 +246,10 @@
 
         <div class="authors">
           <div>
-            <a href="http://twitter.com/hitode909"><img src="images/hitode909.png" intrinsicsize="48x48">hitode909</a>
+            <a href="http://twitter.com/hitode909"><img src="images/hitode909.png" __intrinsicsize="48x48">hitode909</a>
           </div>
           <div>
-            <a href="http://twitter.com/swimy1113"><img src="images/swimy1113.png" intrinsicsize="48x48">swimy1113</a>
+            <a href="http://twitter.com/swimy1113"><img src="images/swimy1113.png" __intrinsicsize="48x48">swimy1113</a>
           </div>
         </div>
 
