--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -180,6 +180,11 @@
           </a>
         </div>
 
+        <p class="tips">
+          <strong>お知らせ 2020年8月</strong><br/>
+          2020年8月以降、重ね着が表示されなくなっていました。<br>復旧にあたって、地域選択が都道府県ごとになりました。利用者の皆様にはご迷惑をおかけします。
+        </p>
+
         <!-- <p class="tips">
           <strong>お知らせ 2019年4月</strong><br/>
           画面サイズにあわせて表示されるようになりました
@@ -201,8 +206,8 @@
 
         <div class="apis">
           <div class="api">
-            <a href="http://weather.livedoor.com/weather_hacks/">
-              Weather Hacks
+            <a href="https://openweathermap.org/">
+              OpenWeather
             </a>
           </div>
 
@@ -220,6 +225,12 @@
         </p>
 
         <div class="apis">
+          <div class="api">
+            <a href="http://weather.livedoor.com/weather_hacks/">
+              Weather Hacks
+            </a>
+          </div>
+
           <div class="api">
             <a href="http://tenkiapi.jp/" class="tenki-logo">
               <img src="images/tenki_logo.gif" intrinsicsize="203x43">
