--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -75,7 +75,8 @@
         </div>
         <div id="first-time-guide">
           <div class="help-image-container">
-            <img class="help-image" src="images/help1.png" intrinsicsize="620x280"/>
+            <p>まずは地域を選択してください。<br>一日の天気から最適な服装をオススメします。</p>
+            <img class="help-image" src="images/help1.png" intrinsicsize="620x280" alt="まずは位置を設定してください。一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメします。"/>
           </div>
           <div class="more">
             <a href="#help">もっと詳しく</a>
